@@ -220,7 +220,7 @@ public class POS {
     
 
     // only in Russian Wiktionary (yet)
-    public static final POS adjectival_participle = new POS("adjectival participle");// adjectival_participle - причастие
+    //??? public static final POS adjectival_participle = new POS("adjectival participle");// adjectival_participle - причастие
     public static final POS verb_interjection = new POS("verb-interjection");// interj1 - глагольно-междометное слово - verb-interjection word
     public static final POS parenthesis = new POS("parenthesis");// вводное слово
     public static final POS prefix_of_compound = new POS("prefix of compound words");// первая часть сложных слов
